--- a/index.html
+++ b/index.html
@@ -102,6 +102,12 @@
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd"></script>
 
   <script src="ai.js"></script>
+  
+  <script src="js/drones.js"></script>
+  
+  <script src="js/utils.js"></script>
+  
+  <script src="js/main.js"></script>
 
 </body>
 
