--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <header>
 
-    <img src="https://raw.githubusercontent.com/AllanAiran/Airan-Defense-Technology-Philippines-Logo-/main/PSX_20250713_134211%20(1)~2.jpg" alt="Airan Defense Logo" class="logo" style="width: 30px; height: auto; vertical-align: middle;" />
+    <img src="https://raw.githubusercontent.com/AllanAiran/Airan-Defense-Technology-Philippines-Logo-/main/PSX_20250713_134211%20(1)~2.jpg" alt="Airan Defense Logo" class="logo" style="width: 50px; height: auto; border-radius: 30px; vertical-align: middle;" />
 
     <h1>Swarm Drone Command Console</h1>
 
