--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <title>Drone Swarm Command UI</title>
 
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/style.css">
 
 </head>
 
